ci: add platform specification to docker-compose.yml and refactor selenium test

--- a/tests/web/taurus/web_performance.yaml
+++ b/tests/web/taurus/web_performance.yaml
@@ -1,14 +1,14 @@
 execution:
 - executor: selenium
   scenario: google_search_scenario
+  options:
+    browser: chrome
+    additional-args:
+    - "--user-data-dir=/tmp/chrome-profile-${__time()}-${__threadNum}"
 
 scenarios:
   google_search_scenario:
-    script: /tests/web/selenium/web_performance_test.py
-    webdriver: Remote
-    remote: ${SELENIUM_URL}
-    capabilities:
-      browserName: chrome
+    script: ../../tests/web/selenium/web_performance_test.py
     iterations: 5
     concurrency: 3
     hold-for: 1m
@@ -17,4 +17,7 @@ reporting:
 - module: console
 - module: final-stats
 - module: junit-xml
-  outfile: /results/performance_results/baseline/web/web_test_result.xml
+  outfile: ../../results/performance_results/baseline/web/web_test_result.xml
+
+# - module: html
+#   output: ../../results/performance_results/baseline/web/web_report.html
