--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,8 +4,7 @@ services:
       context: .
       dockerfile: config/docker/robot-appium/Dockerfile
     environment:
-      - REMOTE_ADB=true
-      - REMOTE_ADB_POLLING_SEC=60
+      - DOCKER_ADB_HOST=true
     ports:
       - 4723:4723
     volumes:
