refactor(docker): update Dockerfile configurations and remove run scripts

--- a/config/docker/taurus-selenium-jmeter/Dockerfile
+++ b/config/docker/taurus-selenium-jmeter/Dockerfile
@@ -9,7 +9,7 @@ RUN apt-get update && \
     update-alternatives --set java /usr/lib/jvm/java-11-openjdk-amd64/bin/java
 
 # Get latest JMeter version from GitHub, download and install
-RUN JMETER_VERSION=$(curl -s https://api.github.com/repos/apache/jmeter/releases/latest | jq -r .tag_name | sed 's/^rel\/v//;s/^v//;s/^rel\///') && \
+RUN JMETER_VERSION=5.6.3 && \
     echo "Installing JMeter version: ${JMETER_VERSION}" && \
     curl -L "https://downloads.apache.org/jmeter/binaries/apache-jmeter-${JMETER_VERSION}.zip" -o /tmp/jmeter.zip && \
     unzip /tmp/jmeter.zip -d /opt && \
