fix(docker): correct syntax in ENTRYPOINT command in Dockerfile

--- a/config/docker/robot-appium/Dockerfile
+++ b/config/docker/robot-appium/Dockerfile
@@ -144,4 +144,4 @@ EXPOSE 4723
 #==============
 # Start script
 #==============
-ENTRYPOINT ["/bin/sh" "-c" "${APP_PATH}/start.sh"]
+ENTRYPOINT ["/bin/sh", "-c", "${APP_PATH}/start.sh"]
